# bongaloons

./: .gitignore  README.md  dump.rdb  requirements.txt
beatmap/: README.md  api.py  catalog.json  config.py  detect_hand_position.py  dump.rdb  game.py  game_state.py  jellyfish.mid  make_beatmap.py  midi.py  models.py  process_data.py  pyproject.toml  redis_client.py  requirements.txt  score.py  serial_handler.py  test.mid  train.py
beatmap/model/: model_doubleTrue.tflite
frontend/: .gitignore  BUGS.md  IMPLEMENTATION.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: settings.json
frontend/public/songmaps/: chacha.mid  jellyauto.mid  payphone_rap.mid  super.mid
frontend/public/songs/: jellyfishjam.m4a
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: BeatmapUpload.tsx  BigJudgement.tsx  BongoCat.tsx  Dot.tsx  GameOver.tsx  Judegment.tsx  Judgement.tsx  Leaderboard.tsx  PushButton.tsx  PushInput.tsx  Settings.tsx  Slider.tsx  SquigglyText.tsx  StreakDisplay.tsx  Track.tsx
frontend/src/components/cosmetics/: DvdLogo.tsx  Table.tsx  dvd-logo.css
frontend/src/context/: GameContext.tsx
frontend/src/pages/: Game.tsx  SongCard.tsx  SongSelect.tsx  TitleScreen.tsx
frontend/src/utils/: audioPlayer.ts  display.ts
mediapipe/: README.md  detect_hand_position.py  process_data.py  requirements.txt  train.py  train_single_hand.py
mediapipe/model/: model_doubleFalse.keras
microcontroller/: treehacks_v1_basic.ino
model/: model_doubleFalse.tflite  model_doubleTrue.keras
