[project]
name = "beatmap"
version = "0.1.0"
description = "Beatmap backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.8",
    "pretty-midi>=0.2.10",
    "pydantic==2.10.6",
    "pygame>=2.6.1",
    "pynput>=1.7.7",
    "setuptools>=75.8.0",
    "uvicorn[standard]==0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 
